[tool.poetry]
name = "fire_remote_esphome"
version = "0.1.0"
description = ""
authors = ["Martin Boos <mboos@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
esphome = "^2024.10.0"
setuptools = "^75.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
